tests/errors/std-boxed-copy-to-after-target-reset.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  let boxed = std::boxed::new<i64>(ref mut source, 21);
  let copied = boxed.copy_to(ref mut target);
  zone::reset(ref mut target);
  return copied.get();
}
